--- a/02_TaskManager/MainWindow.xaml
+++ b/02_TaskManager/MainWindow.xaml
@@ -9,16 +9,21 @@
     <DockPanel>
         <ToolBar DockPanel.Dock="Top">
             <Button Click="Refresh">Refresh</Button>
-            
+            <StackPanel>
+                <RadioButton Click="RadioButton_Click" GroupName="group1">1</RadioButton>
+                <RadioButton Click="RadioButton_Click" GroupName="group1">2</RadioButton>
+                <RadioButton Click="RadioButton_Click" GroupName="group1">20</RadioButton>
+            </StackPanel>
+            <Button Click="Button_Click">Kill</Button>
         </ToolBar>
-        <DataGrid Name="grid" AutoGenerateColumns="True" IsReadOnly="True" >
-            <!--<DataGrid.Columns>
+        <DataGrid Name="grid" AutoGenerateColumns="False" IsReadOnly="True" >
+            <DataGrid.Columns>
                 <DataGridTextColumn Header="Process Name" Binding="{Binding ProcessName}" />
                 <DataGridTextColumn Header="PID" Binding="{Binding Id}" />
                 <DataGridTextColumn Header="Total Processor Time" Binding="{Binding TotalProcessorTime}" />
                 <DataGridTextColumn Header="Priority" Binding="{Binding PriorityClass}" />
                 <DataGridTextColumn Header="User Name" Binding="{Binding UserName}" />
-            </DataGrid.Columns>-->
+            </DataGrid.Columns>
 
         </DataGrid>
     </DockPanel>
